Version 0.10:
    Separated in memory and MapDB storage implementations
    Cleanly separated inflight part (inbound and outbound)
    

Version 0.9:
    Moved canRead check to topic from publish phase to subscribe (#144)
    Added javadoc and src jars creations for JCenter/Maven central
    Added persisting of clean session flag for already existing client session (fix issue #145)
    Moved the message logic management fo FSM, to better control the concurrency.
    Changed default config to use in memory store and not default moquette.mapdb

Version 0.8:
    Introduced authenticator and authorizator implementations.
    Fixed bug, doesn't close the channel when connect doesn't contains a valid proto name, issue #65
    Fixed bug, does not check for zero length topic (filters) in PUBLISH, SUBSCRIBE, and UNSUBSCRIBE, issue #67
    Fixed issue #69
    Fixed bug #68, UNSUBSCRIBE has to fail on bad topicFilter names
    Fixed bug #81, on stop of moquette broker it doesn't shutdown due to no shutdown of ringbuffer used on the back of ProtocolProcessor
    Moved config to be not only filesystem based, but also classpath and memory (fix issue #73)
    Switched from commit persistence on every change to time based to fix delay in handling many msgs/sec (fix issue #79)
    Changed willMessage and password in CONNECT message from String to byte[] (fix issue #94 and #95)
    Fixed ugly empty session storage, avoid fake NullObject empty subscription subscription
    Added check to avoid creation of LostConnectionEvents for not yet completed connects (fix issue #88)
    Removed LMAX ringbuffer to use multi threading with persistent (copy on write) data structures
    Fixed bug that on connection stolen dropped also the new connection (fix issue #108)
    Refactored the storage part to be more rational and use ClientSession concept
    Added config property 'autosave_interval' (issue #97)
    Removed leaking ref to parent's node (issue #119 and #126)